--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,11 @@
         {% endif %}
     </head>
     <body>
-        <div>Test: <a href="/index">Home</a></div>
+        <div>
+            Test: 
+            <a href="/index">Home</a>
+            <a href="/login">Login</a>
+        </div>
         <hr>
         {% block content %}{% endblock %}
     </body>
