--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,6 +16,16 @@
             <a href="/login">Login</a>
         </div>
         <hr>
+        
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
 
         <!-- This is where the extended content will go -->
         {% block content %}{% endblock %}
