--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,8 +12,8 @@
         <!-- Create a navbar -->
         <div>
             Test: 
-            <a href="/index">Home</a>
-            <a href="/login">Login</a>
+            <a href="{{ url_for('index') }}">Home</a>
+            <a href="{{ url_for('login') }}">Login</a>
         </div>
         <hr>
         
