--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,8 @@
 
 {% block content %}
     <h1>Hi, {{ current_user.username }}!</h1>
+
+    <!-- Display all the posts -->
     {% for post in posts %}
     <div><p>{{ post.author.username }} says: <b>{{ post.body }}</b></p></div>
     {% endfor %}
