--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
     <body>
         <!-- Create a navbar -->
         <div>
-            Test: 
+            MyBlog: 
             <a href="{{ url_for('index') }}">Home</a>
 
             <!-- Checks if user is logged in and displays what is needed -->
