--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -1,3 +1,4 @@
+<!-- This is a sub-template to use for posts -->
 <table>
     <tr valign="top">
         <td><img src="{{ post.author.avatar(36) }}"></td>
