--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -4,7 +4,11 @@
     <table>
         <tr valign="top">
             <td><img src="{{ user.avatar(128) }}" ></td>
-            <td><h1>User: {{ user.username }}</h1></td>
+            <td>
+                <h1>User: {{ user.username }}</h1>
+                {% if user.bio %}<p>{{ user.bio }}</p>{% endif %}
+                {% if user.last_seen %}<p>Last seen on: {{ user.last_Seen }}</p>{% endif %}
+            </td>
         </tr>
     </table>
     <hr>
