--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -7,7 +7,12 @@
             <td>
                 <h1>User: {{ user.username }}</h1>
                 {% if user.bio %}<p>{{ user.bio }}</p>{% endif %}
-                {% if user.last_seen %}<p>Last seen on: {{ user.last_Seen }}</p>{% endif %}
+                {% if user.last_seen %}<p>Last seen on: {{ user.last_seen }}</p>{% endif %}
+
+                <!-- Link to edit your profile. Only shows when you are viewing your own profile -->
+                {% if user == current_user %}
+                <p><a href="{{ url_for('edit_profile') }}">Edit your profile</a></p>
+                {% endif %}
             </td>
         </tr>
     </table>
